[workspace]
members = ["crates/*"]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "Dr-Emann/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Customize the Homebrew formula name
formula = "applesauce"
# A prefix git tags must include for cargo-dist to care about them
tag-namespace = "applesauce-cli"
# Whether to install an updater program
install-updater = false

[profile.release]
debug = true
lto = "fat"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
