[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
debug = true
lto = "fat"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
