[package]
name = "applesauce-cli"
version = "0.5.23"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A command-line interface for compressing and decompressing files using macos transparent compression"
repository = "https://github.com/Dr-Emann/applesauce"
readme = "../../README.md"

[[bin]]
name = "applesauce"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["zlib", "lzfse", "lzvn"]

zlib = ["applesauce/zlib"]
lzfse = ["applesauce/lzfse"]
lzvn = ["applesauce/lzvn"]

[dependencies]
applesauce = { version = "^0.8.3", path = "../applesauce", default-features = false }

cfg-if = "1.0.4"
clap = { version = "4.5", features = ["derive"] }
humansize = "2.1"
indicatif = "0.18.3"
tikv-jemallocator = "0.6"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[lints]
workspace = true
