[package]
name = "applesauce-core"
version = "0.3.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A low level library interface for compressing and decompressing files using macos transparent compression"
repository = "https://github.com/Dr-Emann/applesauce"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zlib", "lzfse", "lzvn"]

zlib = ["dep:flate2"]
lzfse = ["dep:lzfse-sys"]
lzvn = ["dep:lzfse-sys"]

# If specified, takes preceidence over lzfse feature
system-lzfse = ["lzfse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
memchr = "2.7"
tracing = "0.1.40"

flate2 = { version = "1.0", optional = true }

# pin to an exact version, since we depend on internal implementation details
lzfse-sys = { version = "=1.0.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
