[package]
name = "applesauce-core"
version = "0.4.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A low level library interface for compressing and decompressing files using macos transparent compression"
repository = "https://github.com/Dr-Emann/applesauce"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zlib", "lzfse", "lzvn"]

zlib = ["dep:libdeflater"]
lzfse = ["dep:lzfse-sys"]
lzvn = ["dep:lzfse-sys"]

# If specified, takes preceidence over lzfse feature
system-lzfse = ["lzfse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.172"
tracing = "0.1.40"
libdeflater = { version = "1.23.0", optional = true }

# pin to an exact version, since we depend on internal implementation details
lzfse-sys = { version = "=2.0.0", optional = true }

[dev-dependencies]
rand = "0.9.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
