[package]
name = "applesauce"
description = "A tool for compressing files with apple file system compression"
license = "GPL-3.0-or-later"
version = "0.8.1"
edition = "2021"
keywords = ["compression", "afsc", "decmpfs"]
categories = ["compression"]
repository = "https://github.com/Dr-Emann/applesauce"
readme = "../../README.md"

[lib]

[features]
default = ["zlib", "lzfse", "lzvn"]

zlib = ["applesauce-core/zlib"]
lzfse = ["applesauce-core/lzfse"]
lzvn = ["applesauce-core/lzvn"]

# If specified, takes preceidence over lzfse feature
system-lzfse = ["lzfse", "applesauce-core/system-lzfse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resource-fork = { version = "^0.3.6", path = "../resource-fork" }
applesauce-core = { version = "^0.4.6", path = "../applesauce-core" }

crossbeam-channel = "0.5.15"
libc = "0.2.175"
memchr = "2.7"
oneshot = "0.1.8"
tempfile = "3.21.0"
tracing = "0.1.40"
dashmap = "6.0.0"

jwalk = "0.8"

[dev-dependencies]
sha2 = "0.10.9"
walkdir = "2.5.0"
