[package]
name = "resource-fork"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for reading and writing Macos resource forks"
repository = "https://github.com/Dr-Emann/applesauce"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10.1"
